## 5.0.0

* Drop the concepts of:
    - core_modules
    - core_plugins
    - mandatory_modules
    - external_modules
* On error, no longer return codes 1-15, but instead return 1 and show the
  exception.
* Instead of a YAML config, use an .ini config only.